# wb_humanoid_mpc

./: .gitmodules  Makefile  README.md
humanoid_nmpc/humanoid_common_mpc_ros2/humanoid_common_mpc_ros2/: mpc_launch_config.py
lib/mujoco_vendor/: CMakeLists.txt
lib/ocs2_ros2/ocs2_sqp/hpipm_catkin/: CMakeLists.txt
robot_models/unitree_g1/g1_centroidal_mpc/config/mpc/: task.info
robot_models/unitree_g1/g1_centroidal_mpc/launch/: dummy_sim_perf.launch.py  dummy_sim_valgrind.launch.py  mujoco_sim.launch.py
robot_models/unitree_g1/g1_wb_mpc/config/mpc/: task.info
robot_models/unitree_g1/g1_wb_mpc/launch/: dummy_sim.launch.py  dummy_sim_perf.launch.py  dummy_sim_valgrind.launch.py  mujoco_sim.launch.py
